fixed alignment
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@25557 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/Strategy.css
+++ b/Site/htdocs/assets/css/Strategy.css
@@ -298,15 +298,14 @@
 		padding-bottom: 5px;
 	}
 
-	#Strategies div.crumb_menu {
+	.crumb_details div.crumb_menu {
 		background-image:url(../images/CryptoDB/trsubhead.png);	
-		width: 94%;
 		position: relative;
 		left: -3px;
 		top: -28px;
 		white-space: nowrap;
 		border: 2px solid #000000;
-		padding: 6px 20px 5px 4px;
+		padding: 6px 2px 5px 0px;
 		height: 12px;
 	}
 
